tests/should_fail/ghost_mapping.stderr
error: called prophetic logic function `<&mut T as creusot_contracts::logic::ops::Fin>::fin` in logic context
  --> ghost_mapping.rs:13:21
   |
13 |     pearlite! { |_| ^x }
   |                     ^^

error: called prophetic logic function `<&mut T as creusot_contracts::logic::ops::Fin>::fin` in logic context
  --> ghost_mapping.rs:25:32
   |
25 |     pearlite! { forall<_x:Int> ^y == 1i32 }
   |                                ^^

error: aborting due to 2 previous errors

